--- a/shift.html
+++ b/shift.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <script>
-    asignaturas.push("Lengua")
+        var asignaturas = []
+asignaturas.push("Lengua")
 asignaturas.push("Ingles")
 asignaturas.push("Matemáticas")
 asignaturas.push("Biología")
